improve styling on mobile fix text in buttons being selectable

--- a/app/src/assets/main.css
+++ b/app/src/assets/main.css
@@ -82,10 +82,19 @@ a {
 button {
   font-family: inherit;
   color: inherit;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 button:not([disabled]) {
   cursor: pointer;
+}
+
+a, button {
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 div[data-empty-text]::after {
